--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
     <script src="https://unpkg.com/vue@next"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
     
 </head>
 <body>
     <div id="hello-world" class="demo">
         {{ message }}
-        <div> counter : {{ counter}}  </div>
+        <div ref='my own ref 2'> counter : {{ counter}}  </div>
         <button v-on:click="stopInterval" v-bind:title="buttonMessage">Stop</button> 
         <blockquote open>v-on here is to allow tag attribute be attached to an event listener that will refer to the vue object on invoking method upon event listening.</blockquote><br>
         <blockquote open>v-bind here is to allow tag attribute to refer to the vue object.</blockquote>
@@ -28,8 +29,14 @@
         <li v-for="item in illnesses"> {{item.text}}</li>
         <blockquote open>v-for here allows tag attribute to refer to vue object and refer to the array .</blockquote>
         <ol>
-            <sample-component v-bind:sample="sample" v-for='sample in samples' v-bind:key="sample"></sample-component>
+            <sample-component v-bind:sam="item" v-for='item in samples' v-bind:key="item" ref='my own reference'></sample-component>
         </ol>
+        <button v-on:[attributeone]="customAction" v-bind:[attributetwo]="buttonMessage2">hover over me</button> 
+        <br>
+        <sample-component2 :authorprop="author"></sample-component2>
+        <blockquote open>watch option for reacting to data changes and especially for aynchronous operations .</blockquote>
+        <input v-model='authorName' />
+        <button @click='authorName ="ngo kee"'>set name to ngo kee</button>
     </div>
     <script src="vue.js"></script>
 </body>
