--- a/public/index.html
+++ b/public/index.html
@@ -211,6 +211,9 @@
         <async-component></async-component>
         <h5>end of async-component &#x2934;</h5>
 
+        <h5>start of sample-component11 &#x2935; <u>Test Mixin</u></h5>
+        <sample-component11></sample-component11>
+        <h5>end of sample-component11 &#x2934;</h5>
         
     </div>
     <script src="vue.js"></script>
