--- a/public/index.html
+++ b/public/index.html
@@ -214,7 +214,12 @@
         <h5>start of sample-component11 &#x2935; <u>Test Mixin</u></h5>
         <sample-component11></sample-component11>
         <h5>end of sample-component11 &#x2934;</h5>
-        
+
+        <h5>start of sample-component12 &#x2935; <u>Use render() and Vue.h() instead of normal template option</u></h5>
+        <sample-component12 :level="3"> h3</sample-component12>
+        <sample-component12 :level="4"> h4</sample-component12>
+        <h5>end of sample-component12 &#x2934;</h5>
+
     </div>
     <script src="vue.js"></script>
 </body>
